# esp32s3_idf532_flash

./: CMakeLists.txt  partitions.csv  sdkconfig
data/: note.txt  readme.txt
data/res/: new.txt  res.txt
main/: CMakeLists.txt  main.cpp
script/: PackageAndUpload.py  build_image.py  call_fatfsparse.py  fatfsgen_tool.py  py_flash.py
script/build_img/fatfs/: project_include.cmake
script/new_build_and_flash/: flash_fatfs_image.py  pack_fatfs_image.py
